fix(responsiveness): make page responsive for 1024px display

--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
 				<button class="button walkthrough__button">Learn More</button>
 			</div>
 		</section>
+		<section id="break-images">
+			<div class="break-images__container">
+				<img class="break-image" src="/images/br1.jpg" alt="break image 1" />
+				<img class="break-image" src="/images/br2.webp" alt="break image 2" />
+				<img class="break-image" src="/images/br3.jpg" alt="break image 3" />
+			</div>
+		</section>
 		<section id="work-flow">
 			<div class="work-flow__left">
 				<h3 class="work-flow__title">
@@ -204,8 +211,10 @@
 				<div class="testimonials__text__description">
 					When we decided to remodel the kitchen and floor of our home, a main
 					consideration was whether to work with an interior designer or not.
-					The main reason was the budget. We had worked with an interior
-					designer.
+					<span class="testimonials__text__description__additional">
+						The main reason was the budget. We had worked with an interior
+						designer.</span
+					>
 				</div>
 			</div>
 		</section>
