fix(responsiveness): make page responsive for 768px display

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
 				</nav>
 				<button class="button landing__button">Contact Us</button>
 			</header>
+			<header class="landing__header__tablet">
+				<div class="landing__header__tablet__upper">
+					<div id="logo">Interio</div>
+					<button class="button landing__button">Contact Us</button>
+				</div>
+				<nav class="navigation navigation__tablet">
+					<a href="#statistics">statistics</a>
+					<a href="#walkthrough">walkthrough</a>
+					<a href="#work-flow">work flow</a>
+					<a href="#projects">projects</a>
+					<a href="#testimonials">testimonials</a>
+				</nav>
+			</header>
 			<main class="landing__main">
 				<h1 class="title">We Help You Make Modern Interior</h1>
 				<p class="description">
@@ -40,6 +53,7 @@
 				/>
 			</main>
 		</section>
+
 		<section id="statistics">
 			<div class="statistics__text">
 				<h3>1,600 Creative minds around 12 offices</h3>
@@ -59,21 +73,21 @@
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						1600
+						900
 						<span>+</span>
 					</div>
 					<div class="statistics__data__label">Employees</div>
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						1248
+						124
 						<span>+</span>
 					</div>
 					<div class="statistics__data__label">Happy clients</div>
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						26
+						265
 						<span>+</span>
 					</div>
 					<div class="statistics__data__label">Winning awards</div>
