fix(responsiveness): make page responsive for 425px display

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						900
+						90
 						<span>+</span>
 					</div>
-					<div class="statistics__data__label">Employees</div>
+					<div class="statistics__data__label">Works done</div>
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
@@ -134,6 +134,13 @@
 				<img class="break-image" src="/images/br3.jpg" alt="break image 3" />
 			</div>
 		</section>
+		<div class="break-images__container__small">
+			<img
+				class="break-image__mobile"
+				src="/images/br4.jpg"
+				alt="break image 4"
+			/>
+		</div>
 		<section id="work-flow">
 			<div class="work-flow__left">
 				<h3 class="work-flow__title">
@@ -207,6 +214,26 @@
 							<h4 class="projects__items__item__title">Innovations</h4>
 							<h6 class="projects__items__item__subtitle">Bathroom</h6>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="projects__items__mobile">
+				<div class="projects__items__left">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Modern Design</h4>
+						<h6 class="projects__items__item__subtitle">Living Room</h6>
+					</div>
+				</div>
+				<div class="projects__items__item__mobile kitchen">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Latest technologies</h4>
+						<h6 class="projects__items__item__subtitle">Kitchen</h6>
+					</div>
+				</div>
+				<div class="projects__items__item__mobile bathroom">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Innovations</h4>
+						<h6 class="projects__items__item__subtitle">Bathroom</h6>
 					</div>
 				</div>
 			</div>
