--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
 				</nav>
 				<button class="button landing__button">Contact Us</button>
 			</header>
+			<header class="landing__header__tablet">
+				<div class="landing__header__tablet__upper">
+					<div id="logo">Interio</div>
+					<button class="button landing__button">Contact Us</button>
+				</div>
+				<nav class="navigation navigation__tablet">
+					<a href="#statistics">statistics</a>
+					<a href="#walkthrough">walkthrough</a>
+					<a href="#work-flow">work flow</a>
+					<a href="#projects">projects</a>
+					<a href="#testimonials">testimonials</a>
+				</nav>
+			</header>
 			<main class="landing__main">
 				<h1 class="title">We Help You Make Modern Interior</h1>
 				<p class="description">
@@ -40,6 +53,7 @@
 				/>
 			</main>
 		</section>
+
 		<section id="statistics">
 			<div class="statistics__text">
 				<h3>1,600 Creative minds around 12 offices</h3>
@@ -59,21 +73,21 @@
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						1600
+						90
 						<span>+</span>
 					</div>
-					<div class="statistics__data__label">Employees</div>
+					<div class="statistics__data__label">Works done</div>
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						1248
+						124
 						<span>+</span>
 					</div>
 					<div class="statistics__data__label">Happy clients</div>
 				</div>
 				<div class="statistics__data">
 					<div class="statistics__data__number">
-						26
+						265
 						<span>+</span>
 					</div>
 					<div class="statistics__data__label">Winning awards</div>
@@ -113,6 +127,20 @@
 				<button class="button walkthrough__button">Learn More</button>
 			</div>
 		</section>
+		<section id="break-images">
+			<div class="break-images__container">
+				<img class="break-image" src="/images/br1.jpg" alt="break image 1" />
+				<img class="break-image" src="/images/br2.webp" alt="break image 2" />
+				<img class="break-image" src="/images/br3.jpg" alt="break image 3" />
+			</div>
+		</section>
+		<div class="break-images__container__small">
+			<img
+				class="break-image__mobile"
+				src="/images/br4.jpg"
+				alt="break image 4"
+			/>
+		</div>
 		<section id="work-flow">
 			<div class="work-flow__left">
 				<h3 class="work-flow__title">
@@ -189,6 +217,26 @@
 					</div>
 				</div>
 			</div>
+			<div class="projects__items__mobile">
+				<div class="projects__items__left">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Modern Design</h4>
+						<h6 class="projects__items__item__subtitle">Living Room</h6>
+					</div>
+				</div>
+				<div class="projects__items__item__mobile kitchen">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Latest technologies</h4>
+						<h6 class="projects__items__item__subtitle">Kitchen</h6>
+					</div>
+				</div>
+				<div class="projects__items__item__mobile bathroom">
+					<div class="projects__items__item__text">
+						<h4 class="projects__items__item__title">Innovations</h4>
+						<h6 class="projects__items__item__subtitle">Bathroom</h6>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section id="testimonials">
 			<img
@@ -204,8 +252,10 @@
 				<div class="testimonials__text__description">
 					When we decided to remodel the kitchen and floor of our home, a main
 					consideration was whether to work with an interior designer or not.
-					The main reason was the budget. We had worked with an interior
-					designer.
+					<span class="testimonials__text__description__additional">
+						The main reason was the budget. We had worked with an interior
+						designer.</span
+					>
 				</div>
 			</div>
 		</section>
