feat(mascot): add mascot and make it slide from the edge of the screen

--- a/index.html
+++ b/index.html
@@ -268,5 +268,9 @@
 				<a href="#">Contact Us</a>
 			</div>
 		</footer>
+		<div class="mascot-container">
+			<img id="mascot" src="/images/mascot.png" alt="mascot" />
+		</div>
+		<script src="/script.js"></script>
 	</body>
 </html>
