feat(mascot): make mascot responsive

--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
 			</div>
 		</footer>
 		<div class="mascot-container">
+			<div id="mascot-message">
+				<h6>Click here to see more projects</h6>
+			</div>
 			<img id="mascot" src="/images/mascot.png" alt="mascot" />
 		</div>
 		<script src="/script.js"></script>
