feat(mascot): add tilt shaking to mascot

--- a/index.html
+++ b/index.html
@@ -272,7 +272,12 @@
 			<div id="mascot-message">
 				<h6>Click here to see more projects</h6>
 			</div>
-			<img id="mascot" src="/images/mascot.png" alt="mascot" />
+			<img
+				id="mascot"
+				src="/images/mascot.png"
+				alt="mascot"
+				class="tilt-shake"
+			/>
 		</div>
 		<script src="/script.js"></script>
 	</body>
