minor: fix image import

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
 		</section>
 		<section id="break-images">
 			<div class="break-images__container">
-				<img class="break-image" src="/images/br1.jpg" alt="break image 1" />
-				<img class="break-image" src="/images/br2.webp" alt="break image 2" />
-				<img class="break-image" src="/images/br3.jpg" alt="break image 3" />
+				<img class="break-image" src="images/br1.jpg" alt="break image 1" />
+				<img class="break-image" src="images/br2.webp" alt="break image 2" />
+				<img class="break-image" src="images/br3.jpg" alt="break image 3" />
 			</div>
 		</section>
 		<div class="break-images__container__small">
 			<img
 				class="break-image__mobile"
-				src="/images/br4.jpg"
+				src="images/br4.jpg"
 				alt="break image 4"
 			/>
 		</div>
@@ -274,11 +274,11 @@
 			</div>
 			<img
 				id="mascot"
-				src="/images/mascot.png"
+				src="images/mascot.png"
 				alt="mascot"
 				class="tilt-shake"
 			/>
 		</div>
-		<script src="/script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
